5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/3960/executions/1734_2499.log
== TEST (2019-05-10 12:48:46) 
-- CODE:
from math import *

k = int(input("Insira "))
e = 1.0
cont = 1

while(cont <= k):
	e = e + (1/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:49:08) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

while(cont <= k):
	e = e + (1/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:49:28) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

while(cont <= k):
	e = e + (1/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 12:49:35) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

while(cont <= k):
	e = e + (1/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- EXECUTION TIME:
0.131117
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:50:01) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

while(cont <= k):
	e = e + (1/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:50:10) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

while(cont <= k):
	e = e + (1/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:50:15) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

while(cont <= k):
	e = e + (1/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:50:27) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

while(cont <= k):
	e = e + (1/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:52:14) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

while(cont <= k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:52:25) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

while(cont <= k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:53:04) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

if(k == 1):
	print(1.0)

while(cont <= k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:53:17) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

if(k == 1):
	print(1.0)
	break

while(cont <= k):
	e = e + (1.0/factorial(cont))
	cont = cont + 1
	
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    break
    ^
SyntaxError: 'break' outside loop
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:53:51) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

if(k == 1):
	print(1.0)
else:
	while(cont <= k):
		e = e + (1.0/factorial(cont))
		cont = cont + 1
	
print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:54:12) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

if(k == 1):
	print(1.0)
else:
	while(cont <= k):
		e = e + (1.0/factorial(cont))
		cont = cont + 1
	print(round(e,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 12:54:17) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

if(k == 1):
	print(1.0)
else:
	while(cont <= k):
		e = e + (1.0/factorial(cont))
		cont = cont + 1
	print(round(e,8))
-- EXECUTION TIME:
0.181432
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 12:57:07) 
-- CODE:
from math import factorial

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

while(cont <= k):
		e = e + (1.0/factorial(cont))
		cont = cont + 1

print(round(e,8))
-- EXECUTION TIME:
0.117253
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 12:58:56) 
-- CODE:
from math import *

k = int(input("Insira um numero natural: "))
e = 1.0
cont = 1

while(cont < k):
		e = e + (1.0/factorial(cont))
		cont = cont + 1

print(round(e,8))
-- EXECUTION TIME:
0.254634
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
